# LC_doc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  lcdoc.yaml  lcdoc_schema.json
.github/workflows/: static.yml
apps/: CMakeLists.txt
apps/lcdoc/: CMakeLists.txt  Project.cpp  Project.hpp  Symbol.cpp  Symbol.hpp  UpdateListener.hpp  console.hpp  cxx_parser.cpp  cxx_parser.hpp  html_page.cpp  html_page.hpp  list_page.cpp  list_page.hpp  main.cpp  parse_project.cpp  parse_project.hpp  string_utils.cpp  string_utils.hpp
apps/lcdoc/clang_interface/: Cursor.cpp  Cursor.hpp  Index.cpp  Index.hpp  TranslationUnit.cpp  TranslationUnit.hpp
apps/lcdoc/example/doc_src/: index@article.html
apps/lcdoc/example/doc_src/other_dir/: my_shema.json  test.json
apps/lcdoc/tooltips/: int-keyword.html
apps/yamljson/: CMakeLists.txt  main.cpp
cmake/: libclang.cmake  post_install.cmake  uninstall.cmake
doc_src/: lcdoc.yaml
doc_src/templates/pages/: article.html  example_meta.yaml
doc_src/website/: index@article.html
doc_src/website/css/: checkbox.css  more_code.css
doc_src/website/js/: preprocess.js
docs/: README.md  index.html
example_project/: README.md  lcdoc.yaml
example_project/doc_src/: index@article.html
example_project/doc_src/templates/pages/: article.html  plain-article.html
example_project/doc_templates/elements/: code.yaml
example_project/some_other_src/: main.cpp
example_project/src/: a.cpp
web/: index.html
